--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -2,28 +2,30 @@
   font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 700;
   border: 0;
-  border-radius: 3em;
+  border-radius: 5px;
   cursor: pointer;
   display: inline-block;
   line-height: 1;
-}
-.storybook-button--primary {
+  margin: 0 0.2rem;
   color: white;
   background-color: #1ea7fd;
+  transition: 0.25s;
 }
-.storybook-button--secondary {
-  color: #333;
-  background-color: transparent;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 0px 1px inset;
+
+.storybook-button:hover {
+  transform: scale(0.9);
 }
+
 .storybook-button--small {
   font-size: 12px;
   padding: 10px 16px;
 }
+
 .storybook-button--medium {
   font-size: 14px;
   padding: 11px 20px;
 }
+
 .storybook-button--large {
   font-size: 16px;
   padding: 12px 24px;
