--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,4 +1,5 @@
-.card {
+.card__day1,
+.card__day2 {
     margin: auto;
     width: 300px;
     height: 420px;
@@ -7,4 +8,14 @@
     padding: 20px 28px;
     color: white;
     position: relative;
+}
+
+.card__day2 {
+    margin: 0 20px;
+    width: 270px;
+    height: 400px;
+    background-color: #242628;
+    text-align: center;
+    overflow: hidden;
+    padding: 0;
 }
